// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`User Edit Panel should allow a new user to be created 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -31,12 +31,13 @@
      </h4>
      <div
        class=\\"rs-drawer-actions\\"
      >
        <button
-         aria-disabled=\\"false\\"
-         class=\\"rs-btn rs-btn-primary\\"
+         aria-disabled=\\"true\\"
+         class=\\"rs-btn rs-btn-primary rs-btn-disabled\\"
+         disabled=\\"\\"
          type=\\"button\\"
        >
          userList.panels.create
          <span
            class=\\"rs-ripple-pond\\"
@@ -86,10 +87,11 @@
              <div
                class=\\"rs-form-control rs-form-control-wrapper\\"
              >
                <input
                  class=\\"rs-input\\"
+                 disabled=\\"\\"
                  name=\\"userList.panels.firstName\\"
                  type=\\"text\\"
                  value=\\"\\"
                />
              </div>
@@ -106,13 +108,14 @@
              <div
                class=\\"rs-form-control rs-form-control-wrapper\\"
              >
                <input
                  class=\\"rs-input\\"
+                 disabled=\\"\\"
                  name=\\"userList.panels.name\\"
                  type=\\"text\\"
-                 value=\\"\\"
+                 value=\\"Testing Müller\\"
                />
              </div>
            </div>
            <div
              class=\\"rs-form-group\\"
@@ -126,10 +129,11 @@
              <div
                class=\\"rs-form-control rs-form-control-wrapper\\"
              >
                <input
                  class=\\"rs-input\\"
+                 disabled=\\"\\"
                  name=\\"userList.panels.preferredName\\"
                  type=\\"text\\"
                  value=\\"\\"
                />
              </div>
@@ -146,13 +150,14 @@
              <div
                class=\\"rs-form-control rs-form-control-wrapper\\"
              >
                <input
                  class=\\"rs-input\\"
+                 disabled=\\"\\"
                  name=\\"userList.panels.email\\"
                  type=\\"text\\"
-                 value=\\"\\"
+                 value=\\"testing@mueller.com\\"
                />
              </div>
            </div>
            <div
              class=\\"rs-form-group\\"
@@ -166,10 +171,11 @@
              <div
                class=\\"rs-form-control rs-form-control-wrapper\\"
              >
                <input
                  class=\\"rs-input\\"
+                 disabled=\\"\\"
                  name=\\"userList.panels.company\\"
                  type=\\"text\\"
                  value=\\"\\"
                />
              </div>
@@ -186,10 +192,11 @@
              <div
                class=\\"rs-form-control rs-form-control-wrapper\\"
              >
                <input
                  class=\\"rs-input\\"
+                 disabled=\\"\\"
                  name=\\"userList.panels.streetAddress\\"
                  type=\\"text\\"
                  value=\\"\\"
                />
              </div>
@@ -206,10 +213,11 @@
              <div
                class=\\"rs-form-control rs-form-control-wrapper\\"
              >
                <input
                  class=\\"rs-input\\"
+                 disabled=\\"\\"
                  name=\\"userList.panels.streetAddress2\\"
                  type=\\"text\\"
                  value=\\"\\"
                />
              </div>
@@ -226,10 +234,11 @@
              <div
                class=\\"rs-form-control rs-form-control-wrapper\\"
              >
                <input
                  class=\\"rs-input\\"
+                 disabled=\\"\\"
                  name=\\"userList.panels.zipCode\\"
                  type=\\"text\\"
                  value=\\"\\"
                />
              </div>
@@ -246,10 +255,11 @@
              <div
                class=\\"rs-form-control rs-form-control-wrapper\\"
              >
                <input
                  class=\\"rs-input\\"
+                 disabled=\\"\\"
                  name=\\"userList.panels.city\\"
                  type=\\"text\\"
                  value=\\"\\"
                />
              </div>
@@ -266,10 +276,11 @@
              <div
                class=\\"rs-form-control rs-form-control-wrapper\\"
              >
                <input
                  class=\\"rs-input\\"
+                 disabled=\\"\\"
                  name=\\"userList.panels.country\\"
                  type=\\"text\\"
                  value=\\"\\"
                />
              </div>
@@ -282,18 +293,19 @@
                class=\\"rs-form-control-label\\"
              >
                userList.panels.active
              </label>
              <label
-               class=\\"rs-toggle rs-toggle-checked\\"
+               class=\\"rs-toggle rs-toggle-checked rs-toggle-disabled\\"
              >
                <input
                  aria-checked=\\"true\\"
-                 aria-disabled=\\"false\\"
+                 aria-disabled=\\"true\\"
                  aria-label=\\"Open\\"
                  checked=\\"\\"
                  class=\\"rs-toggle-input\\"
+                 disabled=\\"\\"
                  role=\\"switch\\"
                  type=\\"checkbox\\"
                />
                <span
                  class=\\"rs-toggle-presentation\\"
@@ -316,13 +328,14 @@
              <div
                class=\\"rs-form-control rs-form-control-wrapper\\"
              >
                <input
                  class=\\"rs-input\\"
+                 disabled=\\"\\"
                  name=\\"userList.panels.password\\"
                  type=\\"password\\"
-                 value=\\"\\"
+                 value=\\"superSecret\\"
                />
              </div>
            </div>
            <div
              class=\\"rs-form-group\\""
`;

exports[`User Edit Panel should allow user role to be added 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -332,11 +332,11 @@
                class=\\"rs-form-control-label\\"
              >
                userList.panels.userRoles
              </label>
              <div
-               class=\\"rs-picker rs-picker-check rs-picker-default rs-picker-toggle-wrapper rs-picker-placement-auto rs-picker-cleanable rs-picker-block rs-picker-countable\\"
+               class=\\"rs-picker rs-picker-check rs-picker-default rs-picker-toggle-wrapper rs-picker-placement-auto rs-picker-has-value rs-picker-cleanable rs-picker-block rs-picker-countable\\"
              >
                <div
                  aria-expanded=\\"false\\"
                  aria-haspopup=\\"listbox\\"
                  class=\\"rs-picker-toggle rs-btn rs-btn-default\\"
@@ -346,17 +346,54 @@
                  <input
                    aria-hidden=\\"true\\"
                    class=\\"rs-picker-toggle-textbox rs-picker-toggle-read-only\\"
                    readonly=\\"\\"
                    tabindex=\\"-1\\"
-                   value=\\"\\"
+                   value=\\"roleId2\\"
                  />
+                 <span
+                   class=\\"rs-picker-toggle-value\\"
+                 >
+                   <span
+                     class=\\"rs-picker-value-list\\"
+                     title=\\"Role 2\\"
+                   >
                      <span
-                   aria-placeholder=\\"Select\\"
-                   class=\\"rs-picker-toggle-placeholder\\"
+                       class=\\"rs-picker-value-item\\"
+                     >
+                       Role 2
+                     </span>
+                   </span>
+                   <span
+                     class=\\"rs-picker-value-count\\"
+                     title=\\"1\\"
+                   >
+                     1
+                   </span>
+                 </span>
+                 <span
+                   aria-label=\\"Clear\\"
+                   class=\\"rs-picker-toggle-clean rs-btn-close\\"
+                   role=\\"button\\"
+                   tabindex=\\"-1\\"
+                   title=\\"Clear\\"
+                 >
+                   <svg
+                     aria-hidden=\\"true\\"
+                     aria-label=\\"close\\"
+                     class=\\"rs-icon\\"
+                     data-category=\\"application\\"
+                     fill=\\"currentColor\\"
+                     focusable=\\"false\\"
+                     height=\\"1em\\"
+                     viewBox=\\"0 0 16 16\\"
+                     width=\\"1em\\"
                    >
-                   Select
+                     <path
+                       d=\\"M2.784 2.089l.069.058 5.146 5.147 5.146-5.147a.5.5 0 01.765.638l-.058.069L8.705 8l5.147 5.146a.5.5 0 01-.638.765l-.069-.058-5.146-5.147-5.146 5.147a.5.5 0 01-.765-.638l.058-.069L7.293 8 2.146 2.854a.5.5 0 01.638-.765z\\"
+                     />
+                   </svg>
                  </span>
                  <svg
                    aria-hidden=\\"true\\"
                    aria-label=\\"angle down\\"
                    class=\\"rs-picker-toggle-caret rs-icon\\""
`;

exports[`User Edit Panel should allow user role to be removed 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -346,11 +346,11 @@
                class=\\"rs-form-control-label\\"
              >
                userList.panels.userRoles
              </label>
              <div
-               class=\\"rs-picker rs-picker-check rs-picker-default rs-picker-toggle-wrapper rs-picker-placement-auto rs-picker-has-value rs-picker-cleanable rs-picker-block rs-picker-countable\\"
+               class=\\"rs-picker rs-picker-check rs-picker-default rs-picker-toggle-wrapper rs-picker-placement-auto rs-picker-cleanable rs-picker-block rs-picker-countable\\"
              >
                <div
                  aria-expanded=\\"false\\"
                  aria-haspopup=\\"listbox\\"
                  class=\\"rs-picker-toggle rs-btn rs-btn-default\\"
@@ -360,54 +360,17 @@
                  <input
                    aria-hidden=\\"true\\"
                    class=\\"rs-picker-toggle-textbox rs-picker-toggle-read-only\\"
                    readonly=\\"\\"
                    tabindex=\\"-1\\"
-                   value=\\"roleId1\\"
+                   value=\\"\\"
                  />
-                 <span
-                   class=\\"rs-picker-toggle-value\\"
-                 >
-                   <span
-                     class=\\"rs-picker-value-list\\"
-                     title=\\"Role 1\\"
-                   >
                  <span
-                       class=\\"rs-picker-value-item\\"
-                     >
-                       Role 1
-                     </span>
-                   </span>
-                   <span
-                     class=\\"rs-picker-value-count\\"
-                     title=\\"1\\"
-                   >
-                     1
-                   </span>
-                 </span>
-                 <span
-                   aria-label=\\"Clear\\"
-                   class=\\"rs-picker-toggle-clean rs-btn-close\\"
-                   role=\\"button\\"
-                   tabindex=\\"-1\\"
-                   title=\\"Clear\\"
-                 >
-                   <svg
-                     aria-hidden=\\"true\\"
-                     aria-label=\\"close\\"
-                     class=\\"rs-icon\\"
-                     data-category=\\"application\\"
-                     fill=\\"currentColor\\"
-                     focusable=\\"false\\"
-                     height=\\"1em\\"
-                     viewBox=\\"0 0 16 16\\"
-                     width=\\"1em\\"
+                   aria-placeholder=\\"Select\\"
+                   class=\\"rs-picker-toggle-placeholder\\"
                  >
-                     <path
-                       d=\\"M2.784 2.089l.069.058 5.146 5.147 5.146-5.147a.5.5 0 01.765.638l-.058.069L8.705 8l5.147 5.146a.5.5 0 01-.638.765l-.069-.058-5.146-5.147-5.146 5.147a.5.5 0 01-.765-.638l.058-.069L7.293 8 2.146 2.854a.5.5 0 01.638-.765z\\"
-                     />
-                   </svg>
+                   Select
                  </span>
                  <svg
                    aria-hidden=\\"true\\"
                    aria-label=\\"angle down\\"
                    class=\\"rs-picker-toggle-caret rs-icon\\""
`;

exports[`User Edit Panel should render 1`] = `
<DocumentFragment>
  <div
    class="rs-drawer-header"
  >
    <span
      aria-label="Close"
      class="rs-drawer-header-close rs-btn-close"
      role="button"
      title="Close"
    >
      <svg
        aria-hidden="true"
        aria-label="close"
        class="rs-icon"
        data-category="application"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M2.784 2.089l.069.058 5.146 5.147 5.146-5.147a.5.5 0 01.765.638l-.058.069L8.705 8l5.147 5.146a.5.5 0 01-.638.765l-.069-.058-5.146-5.147-5.146 5.147a.5.5 0 01-.765-.638l.058-.069L7.293 8 2.146 2.854a.5.5 0 01.638-.765z"
        />
      </svg>
    </span>
    <h4
      class="rs-drawer-title"
    >
      userList.panels.createUser
    </h4>
    <div
      class="rs-drawer-actions"
    >
      <button
        aria-disabled="false"
        class="rs-btn rs-btn-primary"
        type="button"
      >
        userList.panels.create
        <span
          class="rs-ripple-pond"
        >
          <span
            class="rs-ripple"
          />
        </span>
      </button>
      <button
        class="rs-btn rs-btn-subtle"
        type="button"
      >
        userList.panels.close
        <span
          class="rs-ripple-pond"
        >
          <span
            class="rs-ripple"
          />
        </span>
      </button>
    </div>
  </div>
  <div
    class="rs-drawer-body"
  >
    <div
      class="rs-panel"
    >
      <div
        class="rs-panel-body"
        role="region"
      >
        <form
          class="rs-form rs-form-vertical rs-form-fluid"
        >
          <div
            class="rs-form-group"
            role="group"
          >
            <label
              class="rs-form-control-label"
            >
              userList.panels.firstName*
            </label>
            <div
              class="rs-form-control rs-form-control-wrapper"
            >
              <input
                class="rs-input"
                name="firstName"
                type="text"
                value=""
              />
            </div>
          </div>
          <div
            class="rs-form-group"
            role="group"
          >
            <label
              class="rs-form-control-label"
            >
              userList.panels.name*
            </label>
            <div
              class="rs-form-control rs-form-control-wrapper"
            >
              <input
                class="rs-input"
                name="name"
                type="text"
                value=""
              />
            </div>
          </div>
          <div
            class="rs-form-group"
            role="group"
          >
            <label
              class="rs-form-control-label"
            >
              userList.panels.preferredName
            </label>
            <div
              class="rs-form-control rs-form-control-wrapper"
            >
              <input
                class="rs-input"
                name="preferredName"
                type="text"
                value=""
              />
            </div>
          </div>
          <div
            class="rs-form-group"
            role="group"
          >
            <label
              class="rs-form-control-label"
            >
              userList.panels.email*
            </label>
            <div
              class="rs-form-control rs-form-control-wrapper"
            >
              <input
                class="rs-input"
                name="email"
                type="text"
                value=""
              />
            </div>
          </div>
          <div
            class="rs-form-group"
            role="group"
          >
            <label
              class="rs-form-control-label"
            >
              userList.panels.company
            </label>
            <div
              class="rs-form-control rs-form-control-wrapper"
            >
              <input
                class="rs-input"
                name="company"
                type="text"
                value=""
              />
            </div>
          </div>
          <div
            class="rs-form-group"
            role="group"
          >
            <label
              class="rs-form-control-label"
            >
              userList.panels.streetAddress
            </label>
            <div
              class="rs-form-control rs-form-control-wrapper"
            >
              <input
                class="rs-input"
                name="streetAddress"
                type="text"
                value=""
              />
            </div>
          </div>
          <div
            class="rs-form-group"
            role="group"
          >
            <label
              class="rs-form-control-label"
            >
              userList.panels.streetAddress2
            </label>
            <div
              class="rs-form-control rs-form-control-wrapper"
            >
              <input
                class="rs-input"
                name="streetAddress2"
                type="text"
                value=""
              />
            </div>
          </div>
          <div
            class="rs-form-group"
            role="group"
          >
            <label
              class="rs-form-control-label"
            >
              userList.panels.zipCode
            </label>
            <div
              class="rs-form-control rs-form-control-wrapper"
            >
              <input
                class="rs-input"
                name="zipCode"
                type="text"
                value=""
              />
            </div>
          </div>
          <div
            class="rs-form-group"
            role="group"
          >
            <label
              class="rs-form-control-label"
            >
              userList.panels.city
            </label>
            <div
              class="rs-form-control rs-form-control-wrapper"
            >
              <input
                class="rs-input"
                name="city"
                type="text"
                value=""
              />
            </div>
          </div>
          <div
            class="rs-form-group"
            role="group"
          >
            <label
              class="rs-form-control-label"
            >
              userList.panels.country
            </label>
            <div
              class="rs-form-control rs-form-control-wrapper"
            >
              <input
                class="rs-input"
                name="country"
                type="text"
                value=""
              />
            </div>
          </div>
          <div
            class="rs-form-group"
            role="group"
          >
            <label
              class="rs-form-control-label"
            >
              userList.panels.active
            </label>
            <label
              class="rs-toggle rs-toggle-checked"
            >
              <input
                aria-checked="true"
                aria-disabled="false"
                aria-label="Open"
                checked=""
                class="rs-toggle-input"
                role="switch"
                type="checkbox"
              />
              <span
                class="rs-toggle-presentation"
              >
                <span
                  class="rs-toggle-inner"
                />
              </span>
            </label>
          </div>
          <div
            class="rs-form-group"
            role="group"
          >
            <label
              class="rs-form-control-label"
            >
              userList.panels.password*
            </label>
            <div
              class="rs-form-control rs-form-control-wrapper"
            >
              <input
                class="rs-input"
                name="password"
                type="password"
                value=""
              />
            </div>
          </div>
          <div
            class="rs-form-group"
            role="group"
          >
            <label
              class="rs-form-control-label"
            >
              userList.panels.userRoles
            </label>
            <div
              class="rs-picker rs-picker-check rs-picker-default rs-picker-toggle-wrapper rs-picker-placement-auto rs-picker-cleanable rs-picker-block rs-picker-countable"
            >
              <div
                aria-expanded="false"
                aria-haspopup="listbox"
                class="rs-picker-toggle rs-btn rs-btn-default"
                role="combobox"
                tabindex="0"
              >
                <input
                  aria-hidden="true"
                  class="rs-picker-toggle-textbox rs-picker-toggle-read-only"
                  readonly=""
                  tabindex="-1"
                  value=""
                />
                <span
                  aria-placeholder="Select"
                  class="rs-picker-toggle-placeholder"
                >
                  Select
                </span>
                <svg
                  aria-hidden="true"
                  aria-label="angle down"
                  class="rs-picker-toggle-caret rs-icon"
                  data-category="legacy"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="0 0 21 32"
                  width="1em"
                >
                  <path
                    d="M19.196 13.143a.612.612 0 01-.179.411l-8.321 8.321c-.107.107-.268.179-.411.179s-.304-.071-.411-.179l-8.321-8.321c-.107-.107-.179-.268-.179-.411s.071-.304.179-.411l.893-.893a.582.582 0 01.411-.179c.143 0 .304.071.411.179l7.018 7.018 7.018-7.018c.107-.107.268-.179.411-.179s.304.071.411.179l.893.893a.617.617 0 01.179.411z"
                  />
                </svg>
              </div>
            </div>
          </div>
        </form>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`User Edit Panel should render with ID 1`] = `
<DocumentFragment>
  <div
    class="rs-drawer-header"
  >
    <span
      aria-label="Close"
      class="rs-drawer-header-close rs-btn-close"
      role="button"
      title="Close"
    >
      <svg
        aria-hidden="true"
        aria-label="close"
        class="rs-icon"
        data-category="application"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M2.784 2.089l.069.058 5.146 5.147 5.146-5.147a.5.5 0 01.765.638l-.058.069L8.705 8l5.147 5.146a.5.5 0 01-.638.765l-.069-.058-5.146-5.147-5.146 5.147a.5.5 0 01-.765-.638l.058-.069L7.293 8 2.146 2.854a.5.5 0 01.638-.765z"
        />
      </svg>
    </span>
    <h4
      class="rs-drawer-title"
    >
      userList.panels.editUser
    </h4>
    <div
      class="rs-drawer-actions"
    >
      <button
        aria-disabled="false"
        class="rs-btn rs-btn-primary"
        type="button"
      >
        userList.panels.save
        <span
          class="rs-ripple-pond"
        >
          <span
            class="rs-ripple"
          />
        </span>
      </button>
      <button
        class="rs-btn rs-btn-subtle"
        type="button"
      >
        userList.panels.close
        <span
          class="rs-ripple-pond"
        >
          <span
            class="rs-ripple"
          />
        </span>
      </button>
    </div>
  </div>
  <div
    class="rs-drawer-body"
  >
    <div
      class="rs-panel"
    >
      <div
        class="rs-panel-body"
        role="region"
      >
        <form
          class="rs-form rs-form-vertical rs-form-fluid"
        >
          <div
            class="rs-form-group"
            role="group"
          >
            <label
              class="rs-form-control-label"
            >
              userList.panels.firstName*
            </label>
            <div
              class="rs-form-control rs-form-control-wrapper"
            >
              <input
                class="rs-input"
                name="firstName"
                type="text"
                value="Peter"
              />
            </div>
          </div>
          <div
            class="rs-form-group"
            role="group"
          >
            <label
              class="rs-form-control-label"
            >
              userList.panels.name*
            </label>
            <div
              class="rs-form-control rs-form-control-wrapper"
            >
              <input
                class="rs-input"
                name="name"
                type="text"
                value="Parker"
              />
            </div>
          </div>
          <div
            class="rs-form-group"
            role="group"
          >
            <label
              class="rs-form-control-label"
            >
              userList.panels.preferredName
            </label>
            <div
              class="rs-form-control rs-form-control-wrapper"
            >
              <input
                class="rs-input"
                name="preferredName"
                type="text"
                value="Peter Parker"
              />
            </div>
          </div>
          <div
            class="rs-form-group"
            role="group"
          >
            <label
              class="rs-form-control-label"
            >
              userList.panels.email*
            </label>
            <div
              class="rs-form-control rs-form-control-wrapper"
            >
              <input
                class="rs-input"
                name="email"
                type="text"
                value="peter@parker.com"
              />
            </div>
          </div>
          <div
            class="rs-form-group"
            role="group"
          >
            <label
              class="rs-form-control-label"
            >
              userList.panels.company
            </label>
            <div
              class="rs-form-control rs-form-control-wrapper"
            >
              <input
                class="rs-input"
                name="company"
                type="text"
                value=""
              />
            </div>
          </div>
          <div
            class="rs-form-group"
            role="group"
          >
            <label
              class="rs-form-control-label"
            >
              userList.panels.streetAddress
            </label>
            <div
              class="rs-form-control rs-form-control-wrapper"
            >
              <input
                class="rs-input"
                name="streetAddress"
                type="text"
                value=""
              />
            </div>
          </div>
          <div
            class="rs-form-group"
            role="group"
          >
            <label
              class="rs-form-control-label"
            >
              userList.panels.streetAddress2
            </label>
            <div
              class="rs-form-control rs-form-control-wrapper"
            >
              <input
                class="rs-input"
                name="streetAddress2"
                type="text"
                value=""
              />
            </div>
          </div>
          <div
            class="rs-form-group"
            role="group"
          >
            <label
              class="rs-form-control-label"
            >
              userList.panels.zipCode
            </label>
            <div
              class="rs-form-control rs-form-control-wrapper"
            >
              <input
                class="rs-input"
                name="zipCode"
                type="text"
                value=""
              />
            </div>
          </div>
          <div
            class="rs-form-group"
            role="group"
          >
            <label
              class="rs-form-control-label"
            >
              userList.panels.city
            </label>
            <div
              class="rs-form-control rs-form-control-wrapper"
            >
              <input
                class="rs-input"
                name="city"
                type="text"
                value=""
              />
            </div>
          </div>
          <div
            class="rs-form-group"
            role="group"
          >
            <label
              class="rs-form-control-label"
            >
              userList.panels.country
            </label>
            <div
              class="rs-form-control rs-form-control-wrapper"
            >
              <input
                class="rs-input"
                name="country"
                type="text"
                value=""
              />
            </div>
          </div>
          <div
            class="rs-form-group"
            role="group"
          >
            <label
              class="rs-form-control-label"
            >
              userList.panels.active
            </label>
            <label
              class="rs-toggle"
            >
              <input
                aria-checked="false"
                aria-disabled="false"
                aria-label="Close"
                checked=""
                class="rs-toggle-input"
                role="switch"
                type="checkbox"
              />
              <span
                class="rs-toggle-presentation"
              >
                <span
                  class="rs-toggle-inner"
                />
              </span>
            </label>
          </div>
          <div
            class="rs-form-group"
            role="group"
          >
            <button
              class="rs-btn rs-btn-primary"
              type="button"
            >
              userList.panels.resetPassword
              <span
                class="rs-ripple-pond"
              >
                <span
                  class="rs-ripple"
                />
              </span>
            </button>
            <button
              aria-disabled="true"
              class="rs-btn rs-btn-primary rs-btn-disabled"
              disabled=""
              style="margin-left: 20px;"
              type="button"
            >
              userList.panels.sendWebsiteLogin
              <span
                class="rs-ripple-pond"
              >
                <span
                  class="rs-ripple"
                />
              </span>
            </button>
          </div>
          <div
            class="rs-form-group"
            role="group"
          >
            <label
              class="rs-form-control-label"
            >
              userList.panels.userRoles
            </label>
            <div
              class="rs-picker rs-picker-check rs-picker-default rs-picker-toggle-wrapper rs-picker-placement-auto rs-picker-has-value rs-picker-cleanable rs-picker-block rs-picker-countable"
            >
              <div
                aria-expanded="false"
                aria-haspopup="listbox"
                class="rs-picker-toggle rs-btn rs-btn-default"
                role="combobox"
                tabindex="0"
              >
                <input
                  aria-hidden="true"
                  class="rs-picker-toggle-textbox rs-picker-toggle-read-only"
                  readonly=""
                  tabindex="-1"
                  value="roleId1"
                />
                <span
                  class="rs-picker-toggle-value"
                >
                  <span
                    class="rs-picker-value-list"
                    title="Role 1"
                  >
                    <span
                      class="rs-picker-value-item"
                    >
                      Role 1
                    </span>
                  </span>
                  <span
                    class="rs-picker-value-count"
                    title="1"
                  >
                    1
                  </span>
                </span>
                <span
                  aria-label="Clear"
                  class="rs-picker-toggle-clean rs-btn-close"
                  role="button"
                  tabindex="-1"
                  title="Clear"
                >
                  <svg
                    aria-hidden="true"
                    aria-label="close"
                    class="rs-icon"
                    data-category="application"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="0 0 16 16"
                    width="1em"
                  >
                    <path
                      d="M2.784 2.089l.069.058 5.146 5.147 5.146-5.147a.5.5 0 01.765.638l-.058.069L8.705 8l5.147 5.146a.5.5 0 01-.638.765l-.069-.058-5.146-5.147-5.146 5.147a.5.5 0 01-.765-.638l.058-.069L7.293 8 2.146 2.854a.5.5 0 01.638-.765z"
                    />
                  </svg>
                </span>
                <svg
                  aria-hidden="true"
                  aria-label="angle down"
                  class="rs-picker-toggle-caret rs-icon"
                  data-category="legacy"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="0 0 21 32"
                  width="1em"
                >
                  <path
                    d="M19.196 13.143a.612.612 0 01-.179.411l-8.321 8.321c-.107.107-.268.179-.411.179s-.304-.071-.411-.179l-8.321-8.321c-.107-.107-.179-.268-.179-.411s.071-.304.179-.411l.893-.893a.582.582 0 01.411-.179c.143 0 .304.071.411.179l7.018 7.018 7.018-7.018c.107-.107.268-.179.411-.179s.304.071.411.179l.893.893a.617.617 0 01.179.411z"
                  />
                </svg>
              </div>
            </div>
          </div>
        </form>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
